WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
34270
WebCore should not use int64 type
https://bugs.webkit.org/show_bug.cgi?id=34270
Summary
WebCore should not use int64 type
Steve Block
Reported
2010-01-28 09:13:25 PST
V8Binding.h uses int64 type. This should not be used in WebCore. This was introduced in
http://trac.webkit.org/changeset/53574
and causes build errors on Android. See
https://bugs.webkit.org/show_bug.cgi?id=25011
for a similar example.
Attachments
Patch
(1.27 KB, patch)
2010-01-28 10:34 PST
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2010-01-28 10:34:29 PST
Created
attachment 47628
[details]
Patch
WebKit Commit Bot
Comment 2
2010-01-28 18:58:04 PST
Comment on
attachment 47628
[details]
Patch Clearing flags on attachment: 47628 Committed
r54038
: <
http://trac.webkit.org/changeset/54038
>
WebKit Commit Bot
Comment 3
2010-01-28 18:58:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug